+ added support for gzipped sitemaps

8.9.2015: version 3.0.0
+ moved core architecture to Spring Boot, this will allow more future enhancements. 
  Note that if you upgrade from 2.X version that this will require some modifications.
  See UPGRADE-3.0.txt for details. 
+ removed Heroku support. It's easy to add if you need it, though.
  I don't use Heroku anymore, so I removed it.
+ now at least Java 7 is required to run this application
+ hopefully everything will work, but there has been some radical changes under-the-hood,
  so if you upgrade from older version be prepared for anything
+ NOTE that Windows service support is currently removed,
  in the next minor version it will be reimplemented from scratch.

6.9.2015: version 2.2.2
+ enhanced broken links functionality in HTTP and Sitemap check:
   now user can select if the check will follow outbound broken links
+ also now check broken links functionality doesn't require filled condition
+ added support for testing sitemapindex (part of existing sitemap check): 
   http://www.sitemaps.org/protocol.html#index
+ increased default maximum memory
+ added XSD check

13.8.2015: version 2.2.1
+ enhanced dashboard, now contains list of errors

12.8.2015: version 2.2.0
+ dashboard
+ checks split to multiple pages

17.7.2015: version 2.1.13
> thanks Jan Reges for suggestion
+ possibility to check each few seconds

24.6.2015: version 2.1.12
+ more nicer icons
+ more compact check date

23.6.2015: version 2.1.11
+ nicer icons

22.6.2015: version 2.1.10
+ upgraded libraries versions
+ added gzip compression to standalone so that it's even faster

14.6.2015: version 2.1.9
> thanks Ashley Hardesty for these suggestions
+ displaying current version in admin zone
+ button for clearing check results
+ chart stats
+ configurable chart Y-axis maximum
+ overall UI changes

3.6.2015: version 2.1.8
> thanks Ashley Hardesty for these suggestions
+ it's possible now to run the application as a Windows service

2.6.2015: version 2.1.7