@@ -1,4 +1,6 @@
 + added support for gzipped sitemaps
++ when creating sitemap with "name" and "url" containing text "[a..b]" 
+  (for example [1..99]), multiple sitemaps will be created.
 
 8.9.2015: version 3.0.0
 + moved core architecture to Spring Boot, this will allow more future enhancements. 
